Añado enlaces en portada

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ layout: default
 			<i class="fa fa-rocket"></i>
 			<h3>Tecnologías</h3>
 			<p>Existen en el mercado diversas tecnologías de prototipado con las cuales obtenemos prototipos muy diferentes</p>
+			<a href="/tecnologías" class="btn btn-primary">Info</a>
 		</div>
 
 
@@ -20,29 +21,35 @@ layout: default
 			<i class="fa fa-flask"></i>
 			<h3>Materiales</h3>
 			<p>Dependiendo de la tecnología de prototipado elegida, existen multitud de materiales plásticos y metálicos a elegir</p>
+			<a href="/materiales" class="btn btn-primary">Info</a>
 		</div>
 
 		<div class="col-md-4">
 			<i class="fa fa-lightbulb-o"></i>
 			<h3>Aplicaciones</h3>
 			<p>Las piezas fabricadas mediante prototipado rápido se pueden utilizar para muchas aplicaciones </p>
+			<a href="/aplicaciones" class="btn btn-primary">Info</a>
 		</div>
 
 		<div class="col-md-4">
 			<i class="fa fa-wrench"></i>
 			<h3>Sectores</h3>
 			<p>Sectores de prototipado</p>
+			<a href="/sectores" class="btn btn-primary">Info</a>
 		</div>
 
 		<div class="col-md-4">
 			<i class="fa fa-newspaper-o"></i>
 			<h3>Noticias</h3>
 			<p>Ultimas noticias sobre prototipado y trabajos realizados</p>
+			<a href="#" class="btn btn-primary">Info</a>
 		</div>
 
 		<div class="col-md-4">
 			<i class="fa fa-print"></i>
 			<h3>Impresoras 3D</h3>
+			<p></p>
+			<a href="#" class="btn btn-primary">Info</a>
 		</div>
 
 	</div>
